unpackaged/main/default/objects/Order/Order.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>