unpackaged/main/default/objects/Order/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Customer ID from P21</description>
    <label>Customer ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>