unpackaged/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Order Number from P21</description>
    <label>Order Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>