unpackaged/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Order_Amount__c</columns>
    <columns>ORDER.PO_NUMBER</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>